[레거시 코드 리팩토링 하기 - 2단계] 오현서(오리) 미션 제출합니다. (#558)
* refactor: 상품 가격 검증 도메인으로 이동

* refactor: 주문테이블 인원 변경로직 도메인으로 이동

* refactor: 주문테이블 상태 변경 로직 도메인으로 이동

* refactor: 테이블 그룹 생성 로직 일부 도메인으로 변경

* refactor: JpaProductDao 생성

* refactor: TableGroupDao 와 OrderTableDao Jpa 사용하도록 변경

* refactor: 그룹화된 주문테이블에 관계 설정하는 메소드 추가

* refactor: 테이블 그룹화 리팩토링

* refactor: 주문 테이블 생성 DTO 받도록 변경

* refactor: 주문 테이블 생성 DTO 받도록 변경

* refactor: Menu 생성시 Dto 받도록 리팩터링

* refactor: dao를 JpaRepository로 변경

* refactor: OrderRepository 추가

* refactor: Order 도메인 로직 추가

* refactor: Product 생성시 DTO 받도록 변경

* refactor: MenuGroupDao를 MenuGroupRepository로 변경

* refactor: 메뉴 그룹 생성시 DTO 받도록 변경

* refactor: Menu, MenuProduct를 DAO에서 Repository로 변경

* refactor: MenuProduct가 Product를 직접 참조하도록 변경

* refactor: MenuProduct 생성 로직 간소화

* refactor: 주문 상태 변경 로직 도메인 객체 내부로 변경

* refactor: 주문 생성 로직 도메인 객체 내부로 변경

* test: 테스트 코드 가독성 개선

* test: 도메인 테스트 컨벤션 통일

* test: 서비스 테스트 컨벤션 통일

* refactor: 도메인 객체 setter 제거

* refactor: TableGroup을 통해 그룹을 해제하도록 변경

* refactor: Price 원시값 포장

* refactor: Order를 Cooking 상태로 생성하는 메소드 추가

* refactor: OrderLineItems 일급 컬렉션 포장

* refactor: RequestDto에서 toEntity 메소드 제거

* refactor: MenuProducts 일급 컬렉션 포장

* style: 컨벤션 맞게 변경

* chore: hibernate ddl-auto validate 설정 추가

* refactor: Controller 컨벤션에 맞게 변경

* refactor: Price validate 예외 메시지 추가

* test: TestExecutionListener로 test DB 정리하도록 변경

* fix: MenuProducts JoinColumn 안걸던 문제 수정

---------

Co-authored-by: hyunseo <>